// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowList loads correctly for future shows 1`] = `
<ShowCard
  description="<p>All the acting</p>"
  key="Alquist's revenge"
  name="Alquist's revenge"
  showImage={
    Object {
      "description": "A great image",
      "url": "https://example.com/wide.png",
    }
  }
  slug="alquists-revenge"
  ticketLink="https://example.com"
  time="future"
/>
`;

exports[`ShowList loads correctly for past shows 1`] = `
<ShowCard
  description="<p>All the acting</p>"
  key="Alquist's revenge"
  name="Alquist's revenge"
  showImage={
    Object {
      "description": "A great image",
      "url": "https://example.com/wide.png",
    }
  }
  slug="alquists-revenge"
  ticketLink="https://example.com"
  time="past"
/>
`;

exports[`ShowList loads correctly for past shows with no ticket link 1`] = `
<ShowCard
  description="<p>All the acting</p>"
  key="Alquist's revenge"
  name="Alquist's revenge"
  showImage={
    Object {
      "description": "A great image",
      "url": "https://example.com/wide.png",
    }
  }
  slug="alquists-revenge"
  ticketLink={false}
  time="past"
/>
`;
